Added about section

--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
     </ul>
   </div>
   </nav>
-  <h1 id="love-tagline">More love than you can stand</h1>
+  <h1 id="love-tagline">All the love you can stand</h1>
 </header>
 
 <section id="about">
-  <div id="about-text-container">
-    <div id="about-title-container">
-      <img class='about-silhouette'src="img/golden-retriever-silhouette-black.png">
-      <h2 id='about-title'>Who We Are</h2>
-    </div>
+  <div id="about-title-container">
+    <img class='about-silhouette'src="img/golden-retriever-silhouette-black.png">
+    <h2 id='about-title'>Who We Are</h2>
+  </div>
+ 
+  <div class="about-text-container">
     <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
   </div>
 
-  <div id="about-img-container" class="carousel slide" data-ride="carousel">
+  <div class="about-img-container" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="img/carousel-1.png" alt="First slide">
@@ -83,10 +84,29 @@
     </div>
   </div>
 
+
+  <div class="about-img-container" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="img/puppy-1.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/puppy-2.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/puppy-3.png" alt="Third slide">
+      </div>
+    </div>
+  </div>
+
+  <div class="about-text-container">
+    <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
+  </div>
+
 </section>
 
 <section id="health">
-  <h2>Each of our puppies comes with</h2>
+  <h2><img class='health-logo'src='img/golden-retriever-silhouette-health.png'/>Each of our puppies comes with</h2>
   <div id="health-badge-section">
     <div class="row">
     <div id="guarantee-container" class="health-badge col-12 col-sm-4">
