--- a/index.html
+++ b/index.html
@@ -32,31 +32,29 @@
   <!-- Add your site or application content here -->
 
   <header>
-    <nav class="nav justify-content-between">
-      <div class="nav-logo-container">
-            <img class='silhouette' src="img/golden-retriever-silhouette-white.png" />
-            <a id='nav-logo'class="nav-link active" href="#">GoldenRetrieversRI</a>
-    </div>
-    <div class="nav-links-container">
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Customer Pics</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">New Arrivals</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-    </ul>
-  </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <img class='silhouette' src="img/golden-retriever-silhouette-black.png" />
+      <a class="navbar-brand" href="#">GoldenRetrieversRI</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Health</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   <h1 id="love-tagline">All the love you can stand</h1>
 </header>
 
@@ -67,10 +65,11 @@
   </div>
  
   <div class="about-text-container">
-    <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
+    <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. sed in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. </p>
   </div>
 
-  <div class="about-img-container" class="carousel slide" data-ride="carousel">
+  <div class="about-img-container"> 
+  <div class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="img/carousel-1.png" alt="First slide">
@@ -83,9 +82,10 @@
       </div>
     </div>
   </div>
+</div>
 
-
-  <div class="about-img-container" class="carousel slide" data-ride="carousel">
+  <div class="about-img-container"> 
+  <div class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="img/puppy-1.png" alt="First slide">
@@ -98,9 +98,10 @@
       </div>
     </div>
   </div>
+</div>
 
   <div class="about-text-container">
-    <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
+    <p class="about-description">We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
   </div>
 
 </section>
@@ -143,6 +144,11 @@
     </div>
   </div>
 </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p><i class="fa-solid fa-phone"></i>(401)-263-7266</p>
 </section>
 
 
