--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <!-- Add your site or application content here -->
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <img class='silhouette' src="img/golden-retriever-silhouette-black.png" />
+    <nav class="navbar navbar-expand-lg">
+      <img class='silhouette' src="img/golden-retriever-silhouette-white.png" />
       <a class="navbar-brand" href="#">GoldenRetrieversRI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,13 +44,13 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">Who We Are</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Health</a>
+            <a class="nav-link" href="#health">Take Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -108,13 +108,13 @@
 
 <section id="health">
   <h2><img class='health-logo'src='img/golden-retriever-silhouette-health.png'/>Each of our puppies comes with</h2>
-  <div id="health-badge-section">
+  <div id="health-badge-section container">
     <div class="row">
-    <div id="guarantee-container" class="health-badge col-12 col-sm-4">
+    <div id="guarantee-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-heart-pulse"></i>Health Guarantee</h3>
       <p>The health and pedigree of our puppies is assessed by a veterinarian and is guaranteed or your money back</p>
     </div>
-    <div id="vaccine-container" class="health-badge col-12 col-sm-4">
+    <div id="vaccine-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-syringe"></i>9-way Vaccine</h3>
       <p>This vaccine includes</p>
         <ul>
@@ -123,22 +123,22 @@
           <li>Adenovirus</li>
         </ul>
     </div>
-    <div id="microchip-container" class="health-badge col-12 col-sm-4">
+    <div id="microchip-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-microchip"></i>Microchip</h3>
       <p>Each puppy comes with a microchip and microchip number that can be used by an veterinary clinic or hospital to find the owner</p>
     </div>
   </div>
 
   <div class="row">
-    <div id="deworm-container" class="health-badge col-12 col-sm-4">
+    <div id="deworm-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-worm"></i>Deworm Treatment</h3>
       <p>Puppies are preventitively treated for worms at 2, 4, 6, and 8 weeks</p>
     </div>
-    <div id="breed-container" class="health-badge col-12 col-sm-4">
+    <div id="breed-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-file-lines"></i>Purebreed Paperwork</h3>
       <p>Proof of bloodline available upon request</p>
     </div>
-    <div id="carepack-container" class="health-badge col-12 col-sm-4">
+    <div id="carepack-container" class="health-badge m-3 col-12 col-md-3">
       <h3><i class="fa-solid fa-gifts"></i>Care Package</h3>
       <p>Includes food, medical records, treats</p>
     </div>
