--- a/index.html
+++ b/index.html
@@ -64,43 +64,46 @@
     <h2 id='about-title'>Who We Are</h2>
   </div>
  
-  <div class="about-text-container">
-    <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. sed in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. </p>
-  </div>
+  <div class="row">
+    
+    <div class="about-text-container col-10 col-lg-4">
+      <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. </p>
+    </div>
 
-  <div class="about-img-container"> 
-  <div class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/carousel-1.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/carousel-5.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/carousel-3.png" alt="Third slide">
+    <div class="about-img-container"> 
+      <div class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/carousel-1.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/carousel-5.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/carousel-3.png" alt="Third slide">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 </div>
 
   <div class="about-img-container"> 
-  <div class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/puppy-1.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/puppy-2.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/puppy-3.png" alt="Third slide">
+    <div class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/puppy-1.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/puppy-2.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/puppy-3.png" alt="Third slide">
+        </div>
       </div>
     </div>
-  </div>
 </div>
 
-  <div class="about-text-container">
+  <div class="about-text-container col-10 col-lg-4">
     <p class="about-description">We raise our dogs with the highest quality food, medical care, and enrichment. Our goldens have amazing temperments for families or anyone who's looking for a loyal, life-long, loving companion.</p>
   </div>
 
