--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <!-- Add your site or application content here -->
 
   <header>
-    <nav class="navbar navbar-expand-lg">
-      <img class='silhouette' src="img/golden-retriever-silhouette-white.png" />
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <img class='silhouette' src="img/golden-retriever-silhouette-black.png" />
       <a class="navbar-brand" href="#">GoldenRetrieversRI</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
