--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="row">
     
     <div class="about-text-container col-10 col-lg-4">
-      <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaing the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. </p>
+      <p class="about-description">We are a family-run business that has an extensive history of hand-raising healthy, well-behaved, beautiful Golden-Retrievers. Based in Rhode Island, we pride ourselves in maintaining the highest quality of life for our 4 adult Golden Retrievers, whom we treat like our own children. </p>
     </div>
 
     <div class="about-img-container"> 
