--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
       <div class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/carousel-1.png" alt="First slide">
+            <img class="d-block w-100" src="img/carousel-1.jpeg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/carousel-5.png" alt="Second slide">
+            <img class="d-block w-100" src="img/carousel-5.jpeg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/carousel-3.png" alt="Third slide">
+            <img class="d-block w-100" src="img/carousel-3.jpeg" alt="Third slide">
           </div>
         </div>
       </div>
@@ -91,13 +91,13 @@
     <div class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="img/puppy-1.png" alt="First slide">
+          <img class="d-block w-100" src="img/puppy-1.jpeg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/puppy-2.png" alt="Second slide">
+          <img class="d-block w-100" src="img/puppy-2.jpeg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/puppy-3.png" alt="Third slide">
+          <img class="d-block w-100" src="img/puppy-3.jpeg" alt="Third slide">
         </div>
       </div>
     </div>
