health section margins

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </section>
 
 <section id="health">
-  <h2><img class='health-logo'src='img/golden-retriever-silhouette-health.png'/>Each of our puppies comes with</h2>
+  <h2><img class='health-logo'src='img/golden-retriever-silhouette-health.png'/>Each of our puppies come with</h2>
   <div id="health-badge-section container">
     <div class="row">
     <div id="guarantee-container" class="health-badge m-3 col-12 col-md-3">
